--- a/Behave-dark/Behave-dark.qss
+++ b/Behave-dark/Behave-dark.qss
@@ -2434,7 +2434,29 @@ Gui--UrlLabel {
     text-decoration : underline;
 }
 
+/*==================================================================================================
+Settings menu #groupsTreeView:
+==================================================================================================*/
 
+QTreeView::branch#groupsTreeView:closed:has-children:has-siblings  {
+    border-image: none 0;
+  }
+
+  QTreeView::branch#groupsTreeView:open:has-children:has-siblings  {
+    border-image: none 0;
+  }
+
+  QTreeView::branch#groupsTreeView:open:has-children:!has-siblings  {
+   border-image: none 0;
+  }
+
+  QTreeView::branch#groupsTreeView:has-children:!has-siblings:closed  {
+    border-image: none 0;
+  }
+
+  QTreeView::branch#groupsTreeView:has-siblings:!adjoins-item  {
+    border-image: none 0;
+  }
 
 /*==================================================================================================
  * Special tweak for TechDraw ProjGroup task panel to keep acceptable width
